--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           mkdir -p ./scan-results
 
-      # Run SafetyCLI Scan (Check for known vulnerabilities in dependencies)
+      #run SafetyCLI Scan
       - uses: pyupio/safety-action@v1
         name: Safety Scan
         with:
@@ -69,13 +69,14 @@ jobs:
           api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d
           #api-key: ${{ secrets.SAFETY_API_KEY }}
 
-      # Convert Safety results to SARIF and upload (if using a script or another tool)
+      #convert Safety results to SARIF and upload
       - name: Upload Safety results to Code Scanning Alerts
-        if: success() # Only run if Safety scan succeeds
+        if: success()
         run: |
           safety check --json > safety_output.json
-          # Convert Safety output to SARIF format (you would need a script for this)
+          echo "Converting safety_output.json to SARIF"
           python scripts/convert_safety_to_sarif.py safety_output.json ./scan-results/safety_output.sarif
+          echo "Conversion complete."
           
           # Upload the SARIF results
           uses: github/codeql-action/upload-sarif@v2
