--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -66,22 +66,25 @@ jobs:
       #run SafetyCLI Scan
       - uses: pyupio/safety-action@v1
         name: Safety Scan
+        id: safety_scan
         with:
           #harcoding for testing purposes until Karim and I can figure out secrets
           api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d
           #api-key: ${{ secrets.SAFETY_API_KEY }}
 
-      #convert Safety results to SARIF and upload
-      - name: Upload Safety results to Code Scanning Alerts
-        if: success()
+      #save safety output to file
+      run: |
+          safety check --json > ./scan-results/safety_output.json
+
+      #convert safety results to SARIF and upload 
+      - name: Convert and Upload Safety results to SARIF
         run: |
-          safety check --json > safety_output.json
           echo "Converting safety_output.json to SARIF"
-          python scripts/convert_safety_to_sarif.py safety_output.json ./scan-results/safety_output.sarif
+          python scripts/convert_safety_to_sarif.py ./scan-results/safety_output.json ./scan-results/safety_output.sarif
           echo "Conversion complete."
-          
-          # Upload the SARIF results
-          uses: github/codeql-action/upload-sarif@v2
-          with:
-            sarif_file: ./scan-results/safety_output.sarif
+
+      - name: Upload Safety results to Code Scanning Alerts
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ./scan-results/safety_output.sarif
 
