--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -48,7 +48,7 @@ jobs:
       # Save Safety output to file
       - name: Save Safety output to JSON file
         run: |
-          safety scan --debug --json > ./scan-results/safety_output.json
+          safety scan --debug --json --ouput ./scan-results/safety_output.json || echo "Safety scan failed"
 
       # Convert and Upload Safety results to SARIF
       - name: Convert and Upload Safety results to SARIF
