--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -38,17 +38,20 @@ jobs:
           mkdir -p ./scan-results
           chmod -R 755 ./scan-results  # Set permissions to be writable
 
+      '''
       # Run Safety Scan
       - uses: pyupio/safety-action@v1
         name: Safety Scan
         id: safety_scan
         with:
-          api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d # Temporarily hardcoded for testing, replace with secrets.
+          #api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d
+          api-key: ${{ secrets.SAFETY_API_KEY }}
+      '''
 
       # Save Safety output to file
       - name: Save Safety output to JSON file
         run: |
-          safety scan --debug --json --ouput ./scan-results/safety_output.json || echo "Safety scan failed"
+          safety scan --debug --json --api-key ${{ secrets.SAFETY_API_KEY }} --ouput ./scan-results/safety_output.json || echo "Safety scan failed"
 
       # Check the contents of the directory to verify the file is created
       - name: Verify the scan-results directory
