fixing a syntax error

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -38,15 +38,13 @@ jobs:
           mkdir -p ./scan-results
           chmod -R 755 ./scan-results  # Set permissions to be writable
 
-      '''
       # Run Safety Scan
-      - uses: pyupio/safety-action@v1
-        name: Safety Scan
-        id: safety_scan
-        with:
-          #api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d
-          api-key: ${{ secrets.SAFETY_API_KEY }}
-      '''
+      #- uses: pyupio/safety-action@v1
+      #  name: Safety Scan
+      #  id: safety_scan
+      #  with:
+      #    #api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d
+      #    api-key: ${{ secrets.SAFETY_API_KEY }}
 
       # Save Safety output to file
       - name: Save Safety output to JSON file
