trying to use api key as an environment variable

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -46,10 +46,12 @@ jobs:
       #    #api-key: 2ecceb26-6325-44b8-9597-8c2b18493a6d
       #    api-key: ${{ secrets.SAFETY_API_KEY }}
 
-      # Save Safety output to file
-      - name: Save Safety output to JSON file
+      # Run Safety Scan and Save output to json file
+      - name: Run Safety Scan
         run: |
-          safety scan --debug --json --api-key ${{ secrets.SAFETY_API_KEY }} --ouput json > ./scan-results/safety_output.json || echo "Safety scan failed"
+          safety scan --debug --json --output json > ./scan-results/safety_output.json || echo "Safety scan failed"
+        env:
+          SAFETY_API_KEY: ${{ secrets.SAFETY_API_KEY }}
 
       # Check the contents of the directory to verify the file is created
       - name: Verify the scan-results directory
